ingress/ingress-class.yaml
# IngressClass for the AWS Load Balancer Controller.
# The controller (installed via Helm) watches Ingress objects that reference
# this class and provisions an Application Load Balancer (ALB) for each one.
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
